--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "devDependencies": {
     "mithril": "~0.1.12",
     "min-require": "~0.1.1",
-    "bootstrap": "~3.1.1",
-    "bootstrap-sass": "~3.0.2"
+    "bootstrap": "~3.1.1"
   }
 }
