--- a/package.json
+++ b/package.json
@@ -20,28 +20,27 @@
     "connect-livereload": "^0.4.0",
     "event-stream": "^3.1.5",
     "gulp": "^3.6.2",
+    "gulp-clean": "^0.2.4",
     "gulp-concat": "^2.2.0",
     "gulp-inject": "^0.4.1",
+    "gulp-insert": "^0.3.0",
+    "gulp-less": "^1.2.3",
     "gulp-livereload": "^1.5.0",
     "gulp-load-plugins": "^0.5.0",
-    "gulp-plumber": "^0.6.1",
+    "gulp-minify-css": "^0.3.4",
+    "gulp-minify-html": "^0.1.3",
+    "gulp-msx": "^0.1.0",
     "gulp-rev": "^0.3.2",
-    "gulp-sass": "^0.7.1",
     "gulp-size": "^0.3.1",
     "gulp-streamify": "0.0.5",
+    "gulp-sweetjs": "^0.4.0",
     "gulp-uglify": "^0.3.0",
     "gulp-util": "^2.2.14",
     "karma": "^0.12.15",
     "karma-chrome-launcher": "^0.1.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-spec-reporter": "0.0.12",
-    "gulp-clean": "^0.2.4",
-    "gulp-minify-css": "^0.3.4",
     "run-sequence": "^0.3.6",
-    "through2": "^0.4.1",
-    "gulp-msx": "^0.1.0",
-    "gulp-sweetjs": "^0.4.0",
-    "gulp-minify-html": "^0.1.3",
-    "gulp-insert": "^0.3.0"
+    "through2": "^0.4.1"
   }
 }
