--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.6.2",
     "gulp-clean": "^0.2.4",
     "gulp-concat": "^2.2.0",
+    "gulp-include-js": "^0.1.0",
     "gulp-inject": "^0.4.1",
     "gulp-insert": "^0.3.0",
     "gulp-less": "^1.2.3",
@@ -36,6 +37,7 @@
     "gulp-sweetjs": "^0.4.0",
     "gulp-uglify": "^0.3.0",
     "gulp-util": "^2.2.14",
+    "gulp-wrap-require": "^0.1.0",
     "karma": "^0.12.15",
     "karma-chrome-launcher": "^0.1.3",
     "karma-phantomjs-launcher": "^0.1.4",
