--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gulp-sweetjs": "^0.4.0",
     "gulp-uglify": "^0.3.0",
     "gulp-util": "^2.2.14",
-    "gulp-wrap-require": "^0.1.0",
+    "gulp-wrap-require": "git://github.com/ng-vu/gulp-wrap-require.git",
     "karma": "^0.12.15",
     "karma-chrome-launcher": "^0.1.3",
     "karma-phantomjs-launcher": "^0.1.4",
