--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gulp-load-plugins": "^0.5.0",
     "gulp-minify-css": "^0.3.4",
     "gulp-minify-html": "^0.1.3",
-    "gulp-msx": "^0.1.0",
+    "gulp-msx": "git://github.com/ng-vu/gulp-msx.git",
     "gulp-rev": "^0.3.2",
     "gulp-size": "^0.3.1",
     "gulp-streamify": "0.0.5",
