--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "connect-livereload": "^0.4.0",
     "event-stream": "^3.1.5",
     "gulp": "^3.6.2",
+    "gulp-changed": "^0.3.0",
     "gulp-clean": "^0.2.4",
     "gulp-concat": "^2.2.0",
+    "gulp-filter": "^0.4.1",
     "gulp-include-js": "git://github.com/ng-vu/gulp-include-js.git",
     "gulp-inject": "^0.4.1",
     "gulp-insert": "^0.3.0",
@@ -31,23 +33,16 @@
     "gulp-minify-css": "^0.3.4",
     "gulp-minify-html": "^0.1.3",
     "gulp-msx": "git://github.com/ng-vu/gulp-msx.git",
+    "gulp-newer": "^0.3.0",
+    "gulp-plumber": "^0.6.1",
     "gulp-rev": "^0.3.2",
     "gulp-size": "^0.3.1",
     "gulp-streamify": "0.0.5",
     "gulp-sweetjs": "^0.4.0",
     "gulp-uglify": "^0.3.0",
     "gulp-util": "^2.2.14",
-    "gulp-wrap-require": "git://github.com/ng-vu/gulp-wrap-require.git",
-    "karma": "^0.12.15",
-    "karma-chrome-launcher": "^0.1.3",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-spec-reporter": "0.0.12",
-    "run-sequence": "^0.3.6",
-    "through2": "^0.4.1",
-    "gulp-plumber": "^0.6.1",
     "gulp-watch": "^0.6.4",
-    "gulp-filter": "^0.4.1",
-    "gulp-changed": "^0.3.0",
-    "gulp-newer": "^0.3.0"
+    "gulp-wrap-require": "git://github.com/ng-vu/gulp-wrap-require.git",
+    "run-sequence": "^0.3.6"
   }
 }
